Updated code a bunch, still not very good

--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 </header>
 <body>
     <div class="question">question?</div>
-    <div class="answers">a. answers b. answers</div>
+    <div class="answers">
+        <button id="answerA">A.</button>
+        <button id="answerB">B.</button>
+        <button id="answerC">C.</button>
+        <button id="answerD">D.</button>
+    </div>
     <script src = "./assets/script.js"></script>
 </body>
 </html>
