added a button i forgot
still did horrible geez

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <header>
     <div class="scoreboard">high score</div>
-    <div class="timer">time left:</div>
+    <div class="timer" id="countdown"></div>
 </header>
 <body>
+    <button id="startTime">Start!</button>
     <div class="question">question?</div>
     <div class="answers">
         <button id="answerA">A.</button>
